Feat: Remove display of archived url
Because wayback machine will be async. Then we cannot show the archived url.